--- a/public/index.html
+++ b/public/index.html
@@ -1,34 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
     <head>
         <meta charset="utf-8" />
-        <link rel="stylesheet" href="./resources/userSignUp.css" />
+        <link rel="stylesheet" type="text/css" href="resources/css/style.css" />
+        <script src="https://apis.google.com/js/platform.js" async defer></script>
+        <meta name="google-signin-client_id" content="721444271113-jkrgq78cj42e2i8d5jq8lte1b7etnkv8.apps.googleusercontent.com">
     </head>
 
     <body>
-        <form id="formId">
-            <label for="name">Name:</label>
-            <input id="name" type="text" />
-            <br>
-            <br>
-            <label>Phone:</label>
-            <input id="phone" type="tel" />
-            <br>
-            <br>
-            <label>Password:</label>
-            <input id="pass" type="password"/>
-            <br>
-            <br>
-            <label>Confirm Password:</label>
-            <input id="cnfPass" type="password" />
-            <br>
-            <br>
-            <label>Address:</label>
-            <textarea id="ta" rows="5" cols="50"></textarea>
-        </form>
-        <br>
-        <br>
-        <button id="sub">Submit</button>
-        <script type="text/javascript" src="./resources/userSignUp.js"></script>
+        <div class="g-signin2" data-onsuccess="onSignIn"></div>
+        <!-- <button id="signUpId">Signup</button>
+        <button id="loginId">Login</button> -->
+        <script src="resources/javascript/signIn.js"></script>
     </body>
 </html>
