--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,23 @@
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <link rel="stylesheet" type="text/css" href="resources/css/style.css" />
-        <script src="https://apis.google.com/js/platform.js" async defer></script>
-        <meta name="google-signin-client_id" content="721444271113-jkrgq78cj42e2i8d5jq8lte1b7etnkv8.apps.googleusercontent.com">
-    </head>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" type="text/css" href="resources/css/style.css" />
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <meta
+      name="google-signin-client_id"
+      content="721444271113-jkrgq78cj42e2i8d5jq8lte1b7etnkv8.apps.googleusercontent.com"
+    />
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="./resources/icons/favicon.ico"
+    />
+  </head>
 
-    <body>
-        <div class="g-signin2" data-onsuccess="onSignIn"></div>
-        <!-- <button id="signUpId">Signup</button>
+  <body>
+    <div class="g-signin2" data-onsuccess="onSignIn"></div>
+    <!-- <button id="signUpId">Signup</button>
         <button id="loginId">Login</button> -->
-        <script src="resources/javascript/signIn.js"></script>
-    </body>
+    <script src="resources/javascript/signIn.js"></script>
+  </body>
 </html>
