--- a/public/resources/html/mainPage.html
+++ b/public/resources/html/mainPage.html
@@ -1,50 +1,54 @@
 <html>
-    <head>
-        <meta charset='utf-8' />
-        <link rel="stylesheet" type='text/css' href="../css/mainPage.css" />
-        <meta name="google-signin-client_id" content="721444271113-jkrgq78cj42e2i8d5jq8lte1b7etnkv8.apps.googleusercontent.com">
-    </head>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" type="text/css" href="../css/mainPage.css" />
+    <meta
+      name="google-signin-client_id"
+      content="721444271113-jkrgq78cj42e2i8d5jq8lte1b7etnkv8.apps.googleusercontent.com"
+    />
+    <link rel="shortcut icon" type="image/x-icon" href="../icons/favicon.ico" />
+  </head>
 
-    <body>
-        <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-app.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-storage.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-firestore.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-database.js"></script>
-        <script src="https://apis.google.com/js/platform.js?onload=onLoad" async defer></script>
-        <script>
-            function onLoad(){
-                gapi.load('auth2', function(){
-                    gapi.auth2.init();
-                    console.log("Loaded!");
-                })
-            }
-        </script>
-        <button id="gSignOut">Sign Out</button>
-        <div id="dashboard">
+  <body>
+    <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-storage.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-database.js"></script>
+    <script
+      src="https://apis.google.com/js/platform.js?onload=onLoad"
+      async
+      defer
+    ></script>
+    <script>
+      function onLoad() {
+        gapi.load("auth2", function() {
+          gapi.auth2.init();
+          console.log("Loaded!");
+        });
+      }
+    </script>
+    <button id="gSignOut">Sign Out</button>
+    <div id="dashboard"></div>
 
-        </div>
+    <div id="statusBoard"></div>
 
-        <div id="statusBoard">
-            
-        </div>
-
-        <div id="uploadData">
-            <button id="donateItem">Donate Item</button>
-            <form id="donationForm">
-                <label>Product Type: </label>
-                <input id="product" type="text" required/>
-                <br>
-                <br>
-                <label>Upload Image</label>
-                <input id="filename" type="file" accept="image/*" required/>
-                <br>
-                <br>
-                <label>Address to Pick up</label>
-                <textarea id="address" rows="5" cols="50"></textarea>
-            </form>
-            <button id="finalDonate">Donate</button>
-        </div>
-        <script src="../javascript/signOut.js"></script>
-        <script src="../javascript/mainPage.js"></script>
-    </body>
+    <div id="uploadData">
+      <button id="donateItem">Donate Item</button>
+      <form id="donationForm">
+        <label>Product Type: </label>
+        <input id="product" type="text" required />
+        <br />
+        <br />
+        <label>Upload Image</label>
+        <input id="filename" type="file" accept="image/*" required />
+        <br />
+        <br />
+        <label>Address to Pick up</label>
+        <textarea id="address" rows="5" cols="50"></textarea>
+      </form>
+      <button id="finalDonate">Donate</button>
+    </div>
+    <script src="../javascript/signOut.js"></script>
+    <script src="../javascript/mainPage.js"></script>
+  </body>
 </html>
