--- a/public/resources/html/mainPage.html
+++ b/public/resources/html/mainPage.html
@@ -47,6 +47,11 @@
         <textarea id="address" rows="5" cols="50"></textarea>
       </form>
       <button id="finalDonate">Donate</button>
+      <br />
+      <br />
+      <div id="statusBar">
+        <div id="myBar"></div>
+      </div>
     </div>
     <script src="../javascript/signOut.js"></script>
     <script src="../javascript/mainPage.js"></script>
