Added geolocation support

--- a/public/resources/html/mainPage.html
+++ b/public/resources/html/mainPage.html
@@ -34,7 +34,7 @@
 
     <div id="uploadData">
       <button id="donateItem">Donate Item</button>
-      <form id="donationForm">
+      <div id="donationForm">
         <label>Product Type: </label>
         <input id="product" type="text" required />
         <br />
@@ -44,8 +44,9 @@
         <br />
         <br />
         <label>Address to Pick up</label>
-        <textarea id="address" rows="5" cols="50"></textarea>
-      </form>
+        <!-- <textarea id="address" rows="5" cols="50"></textarea> -->
+        <button id="getCoords">Get coordinates</button>
+      </div>
       <button id="finalDonate">Donate</button>
       <br />
       <br />
