Added pickup address again

--- a/public/resources/html/mainPage.html
+++ b/public/resources/html/mainPage.html
@@ -44,7 +44,7 @@
         <br />
         <br />
         <label>Address to Pick up</label>
-        <!-- <textarea id="address" rows="5" cols="50"></textarea> -->
+        <textarea id="address" rows="5" cols="50"></textarea>
         <button id="getCoords">Get coordinates</button>
       </div>
       <button id="finalDonate">Donate</button>
