Adding css to listing page

--- a/public/resources/html/mainPage.html
+++ b/public/resources/html/mainPage.html
@@ -28,6 +28,9 @@
       }
     </script>
     <button id="gSignOut">Sign Out</button>
+    <button onclick="window.location = './listingsPage.html'">
+      Click to see listings
+    </button>
     <div id="dashboard"></div>
 
     <div class="collection">
