spinner using css

--- a/public/resources/html/mainPage.html
+++ b/public/resources/html/mainPage.html
@@ -34,7 +34,18 @@
     <div id="dashboard"></div>
 
     <div class="collection">
-      <div id="statusBoard"></div>
+      <div id="statusBoard">
+        <div class="spinner circles" id="loading">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+      </div>
 
       <div id="uploadData">
         <button id="donateItem">Donate Item</button>
