adding ngo sign in

--- a/public/resources/html/mainPage.html
+++ b/public/resources/html/mainPage.html
@@ -7,6 +7,10 @@
       content="721444271113-jkrgq78cj42e2i8d5jq8lte1b7etnkv8.apps.googleusercontent.com"
     />
     <link rel="shortcut icon" type="image/x-icon" href="../icons/favicon.ico" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
