--- a/public/resources/html/listingsPage.html
+++ b/public/resources/html/listingsPage.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="shortcut icon" type="image/x-icon" href="../icons/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="../css/listingsPage.css" />
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet"> 
+
     <title>Listing Page</title>
   </head>
 
