--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="./resources/css/style.css" type="text/css" />
     <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-database.js"></script>
     <meta
       name="google-signin-client_id"
       content="721444271113-jkrgq78cj42e2i8d5jq8lte1b7etnkv8.apps.googleusercontent.com"
@@ -66,9 +68,9 @@
       <!-- <a href="#" style="color: lightgreen;">Login</a> -->
     </div>
     <div class="counter">
-      <div class="number"></div>
       <br />
       <h3>Total items donated</h3>
+      <div class="number"></div>
     </div>
 
     <script src="../resources/js/signIn.js" type="text/javascript"></script>
