--- a/public/index.html
+++ b/public/index.html
@@ -73,17 +73,25 @@
 
       <div class="counter">
         <br />
-        <h3>Total items donated</h3>
+        <h3>Total items donated:</h3>
         <div class="number"></div>
       </div>
     </div>
 
     <div class="ngo-login-form">
-      <form action="post">
+      <form action="">
         <h1>NGO Sign-In</h1>
         <br />
-        <label for="ngo-mail">e-Mail:</label>
-        <input type="text" name="ngo-mail" id="ngo-mail" />
+        <div class="data">
+          <label for="ngo-mail">e-Mail:</label>
+          <input type="text" name="ngo-mail" id="ngo-mail" />
+        </div>
+        <div class="data">
+          <label for="ngo-password">Password: </label>
+          <input type="password" name="ngo-password" id="ngo-password" />
+        </div>
+
+        <button class="ngo-submit">Submit</button>
       </form>
     </div>
     <script src="../resources/js/signIn.js" type="text/javascript"></script>
