--- a/public/index.html
+++ b/public/index.html
@@ -79,9 +79,13 @@
     </div>
 
     <div class="ngo-login-form">
-      <form action="">
+      <form>
         <h1>NGO Sign-In</h1>
         <br />
+        <div class="data">
+          <label for="ngo-name">NGO Name</label>
+          <input type="text" name="ngo-name" id="ngo-name" />
+        </div>
         <div class="data">
           <label for="ngo-mail">e-Mail:</label>
           <input type="text" name="ngo-mail" id="ngo-mail" />
@@ -91,7 +95,8 @@
           <input type="password" name="ngo-password" id="ngo-password" />
         </div>
 
-        <button class="ngo-submit">Submit</button>
+        <div class="ngo-submit" id="ngoBut">Submit</div>
+        <div id="alert"></div>
       </form>
     </div>
     <script src="../resources/js/signIn.js" type="text/javascript"></script>
