--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,14 @@
     <link rel="stylesheet" href="./resources/css/style.css" type="text/css" />
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-database.js"></script>
     <meta
       name="google-signin-client_id"
       content="721444271113-jkrgq78cj42e2i8d5jq8lte1b7etnkv8.apps.googleusercontent.com"
     />
+    <meta name="google-signin-cookiepolicy" content="single_host_origin" />
+    <meta name="google-signin-scope" content="profile email" />
     <link
       rel="shortcut icon"
       type="image/x-icon"
@@ -64,7 +67,11 @@
       </div>
 
       <div class="login">
-        <div class="g-signin2" data-onsuccess="onSignIn"></div>
+        <div
+          class="g-signin2"
+          data-onsuccess="onSignIn"
+          data-theme="dark"
+        ></div>
         <!-- <a href="#" style="color: lightgreen;">Login</a> -->
       </div>
       <div id="ngo-log">
