--- a/public/resources/html/mainPage.html
+++ b/public/resources/html/mainPage.html
@@ -24,6 +24,10 @@
       async
       defer
     ></script>
+    <script
+      type="text/javascript"
+      src="https://canvasjs.com/assets/script/canvasjs.min.js"
+    ></script>
     <script>
       function onLoad() {
         gapi.load("auth2", function() {
@@ -36,7 +40,9 @@
     <button onclick="window.location = './listingsPage.html'">
       Click to see listings
     </button>
-    <div id="dashboard"></div>
+    <div id="dashboard">
+      <div id="chartContainer"></div>
+    </div>
 
     <div class="collection">
       <div id="statusBoard">
