--- a/public/resources/html/ngo.html
+++ b/public/resources/html/ngo.html
@@ -4,8 +4,24 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../css/ngoMainPage.css" type="text/css" />
   </head>
   <body>
+    <div class="collection">
+      <div class="dashboard">
+        <div id="ngo-name"></div>
+      </div>
+      <div class="things-to-be-picked-up"></div>
+    </div>
+
+    <button onclick="window.location = './listingsPage.html'">
+      Click to see listings
+    </button>
+
+    <script src="../js/ngoMainPage.js" type="text/javascript"></script>
   </body>
 </html>
