--- a/public/resources/html/listingsPage.html
+++ b/public/resources/html/listingsPage.html
@@ -6,7 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="shortcut icon" type="image/x-icon" href="../icons/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="../css/listingsPage.css" />
-    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet"> 
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
 
     <title>Listing Page</title>
   </head>
@@ -16,6 +19,18 @@
     <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-storage.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-database.js"></script>
+
+    <button onclick="window.history.back()">Go Back</button>
+    <div class="spinner circles" id="loading">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
     <div id="donatedItems"></div>
     <script src="../js/listingPage.js" type="text/javascript"></script>
   </body>
