--- a/public/index.html
+++ b/public/index.html
@@ -67,11 +67,7 @@
       </div>
 
       <div class="login">
-        <div
-          class="g-signin2"
-          data-onsuccess="onSignIn"
-          data-theme="dark"
-        ></div>
+        <div class="g-signin2" data-onsuccess="onSignIn"></div>
         <!-- <a href="#" style="color: lightgreen;">Login</a> -->
       </div>
       <div id="ngo-log">
