--- a/public/index.html
+++ b/public/index.html
@@ -82,7 +82,7 @@
     </div>
 
     <div class="ngo-login-form">
-      <form method="POST" action="../public/resources/js/signIn.js">
+      <form>
         <h1>NGO Sign-In</h1>
         <br />
         <div class="data">
@@ -98,7 +98,7 @@
           <input type="password" name="ngo-password" id="ngo-password" />
         </div>
 
-        <button class="ngo-submit" id="ngoBut">Submit</div>
+        <div class="ngo-submit" id="ngoBut">Submit</div>
         <div id="go-back">Click Here to Go Back</div>
         <div id="alert"></div>
       </form>
