--- a/public/resources/html/ngo.html
+++ b/public/resources/html/ngo.html
@@ -11,16 +11,15 @@
     <link rel="stylesheet" href="../css/ngoMainPage.css" type="text/css" />
   </head>
   <body>
+    <button onclick="window.location = './listingsPage.html'">
+      Click to see listings
+    </button>
     <div class="collection">
       <div class="dashboard">
         <div id="ngo-name"></div>
       </div>
-      <div class="things-to-be-picked-up"></div>
+      <div class="things-to-be-picked-up">Things to be picked up:</div>
     </div>
-
-    <button onclick="window.location = './listingsPage.html'">
-      Click to see listings
-    </button>
 
     <script src="../js/ngoMainPage.js" type="text/javascript"></script>
   </body>
