fixed the no items donated issue

--- a/public/resources/html/mainPage.html
+++ b/public/resources/html/mainPage.html
@@ -79,7 +79,7 @@
           <input id="filename" type="file" accept="image/*" required />
           <br />
           <br />
-          <label>Enter mobile number: </label>
+          <label>Enter Mobile Number: </label>
           <input id="mobile_no" type="text" required />
           <label>Address: </label>
           <textarea id="address" rows="5" cols="50"></textarea>
