in the process of allowing ngo's to pick items up

--- a/public/resources/html/ngo.html
+++ b/public/resources/html/ngo.html
@@ -9,10 +9,14 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../css/ngoMainPage.css" type="text/css" />
+    <link rel="shortcut icon" href="../icons/favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <button onclick="window.location = './listingsPage.html'">
       Click to see listings
+    </button>
+    <button id="goBack">
+      Sign Out
     </button>
     <div class="collection">
       <div class="dashboard">
