--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,11 @@
       href="https://fonts.googleapis.com/css?family=Montserrat&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="shortcut icon"
+      href="../public/resources/icons/favicon.ico"
+      type="image/x-icon"
+    />
     <title>Document</title>
     <link rel="stylesheet" href="./resources/css/style.css" type="text/css" />
     <script src="https://apis.google.com/js/platform.js" async defer></script>
