added items being displayed for NGOs

--- a/public/resources/html/ngo.html
+++ b/public/resources/html/ngo.html
@@ -22,7 +22,21 @@
       <div class="dashboard">
         <div id="ngo-name"></div>
       </div>
-      <div class="things-to-be-picked-up">Things to be picked up:</div>
+      <div class="things-to-be-picked-up">
+        <h1>Things to be picked up:</h1>
+        <div class="spinner circles" id="loading">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+        <br />
+        <ul></ul>
+      </div>
     </div>
 
     <script src="../js/ngoMainPage.js" type="text/javascript"></script>
