--- a/public/resources/html/listingsPage.html
+++ b/public/resources/html/listingsPage.html
@@ -21,6 +21,9 @@
     <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-database.js"></script>
 
     <button onclick="window.history.back()">Go Back</button>
+    <div class="text">
+      <div id="text"></div>
+    </div>
     <div class="spinner circles" id="loading">
       <div></div>
       <div></div>
