--- a/public/resources/html/mainPage.html
+++ b/public/resources/html/mainPage.html
@@ -63,14 +63,14 @@
           <!-- <input id="product" type="text" required /> -->
           <select required id="product">
             <datalist>
-              <option value="clothes">Clothes</option>
-              <option value="utensils">Utensils</option>
-              <option value="games">Games</option>
-              <option value="electronics">Electronics</option>
+              <option value="Clothes">Clothes</option>
+              <option value="Utensils">Utensils</option>
+              <option value="Games">Games</option>
+              <option value="Electronics">Electronics</option>
               <option value="Tools">Tools</option>
               <option value="Furniture">Furniture</option>
-              <option value="books">Books</option>
-              <option value="others">Others</option>
+              <option value="Books">Books</option>
+              <option value="Others">Others</option>
             </datalist>
           </select>
           <br />
