enabled status change for NGOs

--- a/public/resources/html/ngo.html
+++ b/public/resources/html/ngo.html
@@ -25,6 +25,11 @@
         </div>
         <div class="things-to-be-picked-up">
           <h1>Things to be picked up:</h1>
+          <h6>
+            To change status, click on the button next to the listing. This will
+            update it to the corresponding status. Please click on the button to
+            update status so that the user can track their status
+          </h6>
           <div class="spinner circles" id="loading">
             <div></div>
             <div></div>
