ngo chart, cookie policy, user item display

--- a/public/index.html
+++ b/public/index.html
@@ -108,6 +108,9 @@
         <div id="alert"></div>
       </form>
     </div>
+    <div id="cookie-consent">
+        <p>This website uses cookies to serve you better</p>
+    </div>
     <script src="../resources/js/signIn.js" type="text/javascript"></script>
   </body>
 </html>
