--- a/public/resources/html/ngo.html
+++ b/public/resources/html/ngo.html
@@ -10,6 +10,10 @@
     />
     <link rel="stylesheet" href="../css/ngoMainPage.css" type="text/css" />
     <link rel="shortcut icon" href="../icons/favicon.ico" type="image/x-icon" />
+    <script
+      type="text/javascript"
+      src="https://canvasjs.com/assets/script/canvasjs.min.js"
+    ></script>
   </head>
   <body>
     <div class="every">
@@ -22,6 +26,7 @@
       <div class="collection">
         <div class="dashboard">
           <div id="ngo-name"></div>
+          <div id="chartContainer"></div>
         </div>
         <div class="things-to-be-picked-up">
           <h1>Things to be picked up:</h1>
