--- a/public/index.html
+++ b/public/index.html
@@ -108,9 +108,13 @@
         <div id="alert"></div>
       </form>
     </div>
-    <div id="cookie-consent">
-        <p>This website uses cookies to serve you better</p>
-    </div>
+
+    <footer id="cookie-consent">
+      <p>
+        This website uses cookies to serve you better. By using this website,
+        you consent to the storage of cookies on your browser
+      </p>
+    </footer>
     <script src="../resources/js/signIn.js" type="text/javascript"></script>
   </body>
 </html>
