modified the chart location of ngo main page

--- a/public/resources/html/listingsPage.html
+++ b/public/resources/html/listingsPage.html
@@ -20,7 +20,7 @@
     <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-database.js"></script>
 
-    <button onclick="window.history.back()">Go Back</button>
+    <button onclick="window.history.back(); location.reload()">Go Back</button>
     <div class="text">
       <div id="text"></div>
     </div>
