CSS changes, dashboard

--- a/public/resources/html/mainPage.html
+++ b/public/resources/html/mainPage.html
@@ -39,7 +39,9 @@
     <button id="gSignOut">Sign Out</button>
 
     <div id="dashboard">
-      <div id="chartContainer"></div>
+      <div id="userDetails"></div>
+      <div id="chartContainer1"></div>
+      <div id="chartContainer2"></div>
     </div>
 
     <div class="collection">
