--- a/public/index.html
+++ b/public/index.html
@@ -110,10 +110,11 @@
     </div>
 
     <footer id="cookie-consent">
-      <p>
+      <div id="cookieNotice">
         This website uses cookies to serve you better. By using this website,
         you consent to the storage of cookies on your browser
-      </p>
+      </div>
+      <div id="cancelCookieDisplay">x</div>
     </footer>
     <script src="../resources/js/signIn.js" type="text/javascript"></script>
   </body>
